--- a/contact.css
+++ b/contact.css
@@ -1,8 +1,9 @@
 /* Contact */
 .contact-container {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     margin-top: 100px;
+    background-color: rgb(214, 189, 152);
 }
 
 .illustration-img {
@@ -14,6 +15,7 @@
     display: inline-block;
     margin: 10px 30px;
     text-align: center;
+    font-family: "Orbitron", sans-serif;
 }
 
 .profile-contact-img {
@@ -87,6 +89,7 @@
     border-bottom: 1px solid grey;
     outline: none;
     margin-top: 10px;
+    border: 2px solid rgb(64, 83, 76);
 }
 
 /* Submit */
@@ -97,6 +100,7 @@
     background-color: rgb(38, 70, 83);
     margin: 5px;
     cursor: pointer;
+    padding: 10px 50px;
 }
 
 .input-item:focus + .form-label {
@@ -118,3 +122,9 @@
     color: rgb(138, 130, 130);
 }
 
+.textarea:not(:placeholder-shown).textarea:not(:focus) + .form-label {
+    top: -2px;
+    left: -2px;
+    font-size: 10px;
+    color: rgb(138, 130, 130);
+}
