--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ main {
     border-bottom: 8px solid rgb(224, 251, 252);
     font-family: "Kanit", sans-serif;
     width: 700px;
+    font-size: 35px;
 }
 
 /* Homepage */
