--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ main {
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: cadetblue;
+    background-color: rgb(38, 53, 93);
     z-index: 200;
     margin: 0;
     padding: 0;
@@ -73,6 +73,7 @@ main {
     top: 60%;
     left: 40%;
     font-size: 50px;
+    color: white;
 }
 
 .astronaut-dabbing {
@@ -85,7 +86,7 @@ main {
 
 .astronaut-takeoff {
     position: absolute;
-    top: 93%;
+    top: 100%;
     left: 18%;
 }
 
