--- a/about.css
+++ b/about.css
@@ -1,5 +1,5 @@
 /* Introduction */
-.section-container  {
+.section-container {
     text-align: center;
     padding: 10px;
     background-color: rgb(214, 189, 152);
@@ -38,7 +38,7 @@
     top: 350px;
 }
 
-.about-description h4{
+.about-description h4 {
     color: gray;
     letter-spacing: 2px;
 }
@@ -57,6 +57,7 @@
     align-items: center;
     justify-content: space-around;
     margin-top: 50px;
+    flex-direction: column;
 }
 
 .skill-item {
@@ -65,7 +66,7 @@
     padding: 15px;
     background-color: white;
     display: flex;
-    margin-left: 150px;
+    /* margin-left: 150px; */
     background-color: rgb(214, 189, 152);
 }
 
@@ -98,9 +99,33 @@
     font-size: 40px;
     color: yellow;
     text-shadow:
-       3px 3px 0 #000,
-     -1px -1px 0 #000,  
-      1px -1px 0 #000,
-      -1px 1px 0 #000,
-       1px 1px 0 #000;
+        3px 3px 0 #000,
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
+}
+
+@media only screen and (max-width: 768px) {
+    .section-title {
+        padding-top: 32px;
+    }
+    .about-description p {
+        font-size: 24px;
+        padding-left: 32px;
+        padding-right: 32px;
+    }
+    .skill-item{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-bottom: 64px;
+    }
+    .skill-item-description{
+        max-width: 100%;
+        margin-left: 0px;
+    }
+    .skill-item-description p, .skill-item-description h4, .skill-item-description div {
+        text-align: center;
+    }
 }
