--- a/style.css
+++ b/style.css
@@ -13,13 +13,16 @@ main {
 
 /* jumbotron */
 #jumbotron {
-    width: 100%;
+    max-width: 100%;
+    margin-top: 50px;
 }
 
 .jumbotron-title {
-    display: flex; 
-    justify-content: flex-start;
+    display: flex;
+    justify-content: space-evenly;
     align-items: center;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .jumbotron {
@@ -39,10 +42,9 @@ main {
 }
 
 .jumbotron-img2 {
-    height: 350px;
+    height: auto;
     width: 500px;
-    margin-top: 30px;
-    margin-left: 100%;
+    margin-top: 32px;
     border: 2px solid white;
     border-radius: 10px;
 }
@@ -53,9 +55,10 @@ main {
     padding-bottom: 20px;
     border-bottom: 8px solid rgb(224, 251, 252);
     font-family: "Kanit", sans-serif;
-    width: 700px;
+    /* width: 700px; */
     font-size: 35px;
 }
+
 /* Splash */
 .splash {
     position: fixed;
@@ -91,35 +94,41 @@ main {
 }
 
 .animation {
-    animation: glide 3s  ease-out forwards;
+    animation: glide 3s ease-out forwards;
 }
 
 @keyframes hide {
     0% {
         opacity: 1;
     }
+
     50% {
         opacity: 0.5;
     }
+
     75% {
         opacity: 0.7;
     }
+
     100% {
         opacity: 0;
     }
 }
+
 @keyframes glide {
     50% {
         transform: scale(0.8);
     }
+
     100% {
-        transform:translateY(-900px) scale(0.1);
+        transform: translateY(-900px) scale(0.1);
     }
 }
+
 /* Homepage */
 #hobby {
     background-color: rgb(64, 83, 76);
-    margin-top: -20px;
+    margin-top: -5px;
 }
 
 .hobbycard1 {
@@ -158,7 +167,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0 , 0, 0.411);
+    background-color: rgba(0, 0, 0, 0.411);
     visibility: hidden;
     opacity: 0;
     transition: visibilty 1s, opacity 1s;
@@ -199,4 +208,41 @@ main {
     margin: 0 auto 0 auto;
     padding: 0;
     width: 300px;
+}
+
+@media only screen and (max-width: 768px) {
+    .hobbycontainer {
+        max-width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .jumbotron-title {
+        flex-direction: column;
+        height: auto;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .header-flex {
+        max-width: 100%;
+        padding-left: 32px;
+        padding-right: 32px;
+    }
+
+    .jumbotron-text {
+        font-size: 24px;
+    }
+
+    .splash h1 {
+        text-align: center;
+        top: 60%;
+        left: 20%;
+    }
+
+    .astronaut-dabbing {
+        top: 20%;
+        left: 25%;
+    }
 }
