--- a/credit.css
+++ b/credit.css
@@ -15,3 +15,13 @@
         text-align: center;
     }
 }
+
+
+@media only screen and (max-width: 375px) {
+    h1 {
+        font-size: 25px;
+        margin-top: -72px;
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+}
