--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ main {
     padding-bottom: 20px;
     border-bottom: 8px solid rgb(224, 251, 252);
     font-family: "Kanit", sans-serif;
-    /* width: 700px; */
+    width: 700px;
     font-size: 35px;
 }
 
@@ -219,6 +219,12 @@ main {
     width: 300px;
 }
 
+/* Jumbotron Image */
+.jumbotron-img2 {
+    margin-right: 15px;
+}
+
+
 @media only screen and (max-width: 768px) {
     .hobbycontainer {
         max-width: 100%;
@@ -287,5 +293,9 @@ main {
     .astronaut-dabbing {
         left: 5%;
         top: 0%;
+    }
+
+    .jumbotron-text {
+        max-width: 300px;
     }
 }
